--- a/src/components/ComputerContainer/computer.css
+++ b/src/components/ComputerContainer/computer.css
@@ -1,5 +1,12 @@
-.computer-hand {
-     height:210px;
-     width:210px;
+.computer-hand 
+{ 
+max-width: 100%;
+  max-height: 100%;
+display: inline-block;
+    border-radius: 50%;
+   margin: 2;
+  padding: 10;
+   width:200px;
+ 
 }
 
