--- a/src/components/WelcomeFirstContainer/WelcomeFirst.css
+++ b/src/components/WelcomeFirstContainer/WelcomeFirst.css
@@ -1,5 +1,16 @@
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+
+}
+
+
+
 .logo{
-    animation: fill 1s ease forwards 3.5s;
+    animation: fill 0.5s ease forwards 3s;
     display: flex;
     justify-content: center;
 }
@@ -8,67 +19,71 @@
 
 
 .logo path:nth-child(1){
-  stroke-dasharray: 0px;
+  stroke-dasharray:60.01px;
+   stroke-dashoffset: 76.5px;
+   animation: line-anim 2s ease forwards 1s;
+   
+   
 }
 
 .logo path:nth-child(2){
-   stroke-dasharray: 200px;
-   stroke-dashoffset: 200px;
-   animation: line-anim 2s ease forwards 0.6s;
+   stroke-dasharray: 77px;
+   stroke-dashoffset: 77px;
+   animation: line-anim 2s ease forwards 1.8s;
 }
 
 
 
 .logo path:nth-child(3){
-  stroke-dasharray:200px;
-   stroke-dashoffset: 200px;
-   animation:line-anim 2s ease forwards 0.9s;
+  stroke-dasharray:67.63px;
+   stroke-dashoffset: 77.5px;
+   animation:line-anim 2s ease forwards 2.6s;
 }
 
 
 .logo path:nth-child(4){
-    stroke-dasharray:200px;
-   stroke-dashoffset: 200px;
-    animation:line-anim 2s ease forwards 1.2s;
+    stroke-dasharray:77px;
+   stroke-dashoffset: 77px;
+    animation:line-anim 2s ease forwards 3.4s;
 }
 
 .logo path:nth-child(5){
     stroke-dasharray:200px;
      stroke-dashoffset: 200px;
-      animation:line-anim 2s ease forwards 1.5s;
+      animation:line-anim 2s ease forwards 3.8s;
 }
 
 .logo path:nth-child(6){
   stroke-dasharray:200px;
    stroke-dashoffset: 200px;
-    animation:line-anim 2s ease forwards 1.8s;
+    animation:line-anim 2s ease forwards 3.8s;
 }
 
 
 .logo path:nth-child(7){
   stroke-dasharray:200px;
    stroke-dashoffset: 200px;
-    animation:line-anim 2s ease forwards 2.1s;
+    animation:line-anim 2s ease forwards 4s;
 }
 
 
 .logo path:nth-child(8){
   stroke-dasharray:200px;
    stroke-dashoffset: 200px;
-    animation:line-anim 2s ease forwards 2.4s;
+    animation:line-anim 2s ease forwards 4.2s;
 }
 
 
 .logo path:nth-child(9){
   stroke-dasharray:200px;
    stroke-dashoffset: 200px;
-    animation:line-anim 2s ease forwards 2.7s;
+    animation:line-anim 2s ease forwards 4.4s;
 }
 
 .logo path:nth-child(10){
   stroke-dasharray:200px;
    stroke-dashoffset: 200px;
-    animation:line-anim 2s ease forwards 3.0s;
+    animation:line-anim 2s ease forwards 4.6s;
 
 }
 
@@ -77,7 +92,7 @@
 .logo path:nth-child(11){
   stroke-dasharray:200px;
    stroke-dashoffset: 200px;
-    animation:line-anim 2s ease forwards 3.3s;
+    animation:line-anim 2s ease forwards 4.8s;
 
 }
 
@@ -85,7 +100,7 @@
 .logo path:nth-child(12){
   stroke-dasharray:200px;
    stroke-dashoffset: 200px;
-    animation:line-anim 2s ease forwards 3.6s;
+    animation:line-anim 2s ease forwards 5.0s;
 
 }
 
@@ -93,7 +108,7 @@
 .logo path:nth-child(13){
   stroke-dasharray:200px;
    stroke-dashoffset: 200px;
-    animation:line-anim 2s ease forwards 3.9s;
+    animation:line-anim 2s ease forwards 5.2s;
 
 }
 
@@ -101,7 +116,7 @@
 .logo path:nth-child(14){
   stroke-dasharray:200px;
    stroke-dashoffset: 200px;
-    animation:line-anim 2s ease forwards 4.2s;
+    animation:line-anim 2s ease forwards 5.4s;
 
 }
 
@@ -109,7 +124,7 @@
 .logo path:nth-child(15){
   stroke-dasharray:200px;
    stroke-dashoffset: 200px;
-    animation:line-anim 2s ease forwards 4.5s;
+    animation:line-anim 2s ease forwards 5.6s;
 
 }
 
@@ -117,7 +132,7 @@
 .logo path:nth-child(16){
   stroke-dasharray:200px;
    stroke-dashoffset: 200px;
-    animation:line-anim 2s ease forwards 4.7s;
+    animation:line-anim 2s ease forwards 5.8s;
 
 }
 
@@ -125,7 +140,7 @@
 .logo path:nth-child(17){
   stroke-dasharray:200px;
    stroke-dashoffset: 200px;
-    animation:line-anim 2s ease forwards 5.0s;
+    animation:line-anim 2s ease forwards 9.0s;
 
 }
 
@@ -221,11 +236,3 @@
 stroke-dashoffset:0;
      }
  }
- @keyframes fill{
-     from {
-         fill:none;
-     }
- to{ fill: orange;
- }
- }
-
